# joyfuljay

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  TESTING-STATUS.MD  directory_structure.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  __main__.py  benchmark_all_wireshark.py  benchmark_pipeline.py  benchmark_stats.py  benchmark_tranalyzer2.py  comprehensive_benchmark.py  feature_benchmark.py  memory_benchmark.py  real_benchmark.py  run.py  run_all.py  speed_benchmark.py
benchmarks/.github/workflows/: tranalyzer2-benchmark.yml
benchmarks/data/wireshark_samples/: 2dParityFEC-Example.cap  ascend.trace  dns_flows.txt  dns_headers.txt  dns_protocols.txt  edp.eaps.mirror2.trace  fip-adv.cap  mapi.cap
benchmarks/results/: TRANALYZER2_BENCHMARK_REPORT.md  WIRESHARK_SAMPLES_BENCHMARK_REPORT.md  benchmark_results.json  comprehensive_benchmark_results.json  real_benchmark_results.json  t2_docker_results.txt  tranalyzer2_benchmark_results.json  tranalyzer2_benchmark_summary.json  wireshark_benchmark_results.json  wireshark_benchmark_summary.json
dashboards/: joyfuljay-overview.json
docs/: PRD-DOCUMENTATION.md  api.md  architecture.md  benchmarks.md  citation.md  cli-reference.md  configuration.md  developer-guide.md  features.md  index.md  installation.md  kafka.md  monitoring.md  quickstart.md  remote-capture.md  requirements.txt  tags.md  testing.md  why-joyfuljay.md
docs/api-reference/: index.md
docs/api-reference/capture/: backends.md  index.md
docs/api-reference/core/: config.md  flow.md  index.md  packet.md  pipeline.md
docs/api-reference/joyfuljay/: extract-live.md  extract.md  index.md
docs/api-reference/monitoring/: index.md
docs/api-reference/output/: index.md  writers.md
docs/api-reference/utils/: index.md
docs/appendix/: bpf-filters.md  index.md  port-numbers.md  sample-pcaps.md  tcp-flags.md  tls-versions.md
docs/architecture/: data-flow.md  design-principles.md  extractor-system.md  index.md  performance.md
docs/benchmarks/: benchmark-protocol.md  index.md
docs/comparison/: feature-comparison.md  index.md  vs-cicflowmeter.md  vs-nfstream.md  vs-tranalyzer.md
docs/concepts/: determinism.md  index.md  schema.md
docs/developers/: index.md
docs/development/: building.md  code-style.md  contributing.md  documentation.md  index.md
docs/engineering/: FEATURE_FREEZE.md  INITIAL-CONCEPT.md  PARITY.md  TODO.md  determinism.md  layers.md  versioning.md
docs/extractors/: architecture.md  connection.md  dns.md  entropy.md  fingerprint.md  flow-meta.md  index.md  padding.md  quic.md  size.md  ssh.md  tcp.md  timing.md  tls.md
docs/features/: complete-reference.md  feature-groups.md  index.md
docs/features/connection/: index.md
docs/features/dns/: index.md
docs/features/entropy/: index.md
docs/features/fingerprint/: doh.md  index.md  tor.md  vpn.md
docs/features/flow-meta/: index.md
docs/features/http2/: index.md
docs/features/icmp/: index.md
docs/features/mac/: index.md
docs/features/padding/: index.md
docs/features/quic/: index.md
docs/features/size/: index.md
docs/features/ssh/: hassh.md  index.md
docs/features/tcp/: fingerprint.md  flags.md  handshake.md  index.md  options.md  rtt.md  sequence.md  window.md
docs/features/timing/: burst.md  iat.md  index.md
docs/features/tls/: certificates.md  index.md  ja3.md  ja3s.md
docs/getting-started/: first-extraction.md  index.md  installation.md  next-steps.md  quickstart.md
docs/includes/: abbreviations.md
docs/integrations/: index.md
docs/integrations/databases/: index.md  postgresql.md  sqlite.md
docs/integrations/grafana/: dashboards.md  index.md
docs/integrations/kafka/: index.md  setup.md  streaming.md
docs/integrations/ml-frameworks/: index.md  pytorch.md  scikit-learn.md  tensorflow.md
docs/integrations/prometheus/: index.md  metrics.md  setup.md
docs/javascripts/: extra.js  mathjax.js
docs/reference/: changelog.md  faq.md  glossary.md  index.md  migration.md  security.md  troubleshooting.md
docs/release/: index.md  reproducibility.md  versioning.md
docs/remote-capture/: architecture.md  client-connection.md  discovery.md  index.md  security.md  server-setup.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/tutorials/: batch-processing.md  custom-extractors.md  encrypted-traffic.md  index.md  realtime-monitoring.md  traffic-classification.md
docs/tutorials/advanced/: deep-learning.md  index.md  production-deployment.md  remote-capture.md
docs/tutorials/beginner/: index.md  saving-results.md  selecting-features.md  understanding-output.md  your-first-pcap.md
docs/tutorials/use-cases/: anomaly-detection.md  application-identification.md  index.md  iot-security.md  malware-detection.md  network-forensics.md
docs/usage/: index.md
docs/user-guide/: index.md
examples/: basic_extraction.py  batch_processing.py  custom_extractor.py  kafka_streaming.py  live_capture.py  ml_classification.py  remote_capture.py
profiles/: JJ-EXPERIMENTAL.txt  JJ-EXTENDED.txt
scripts/: cleanup_repo.sh  download_benchmark_data.py
src/joyfuljay/: __init__.py  __main__.py  provenance.py
tests/: __init__.py  conftest.py
tests/data/: sample.pcap
tests/fixtures/: __init__.py  packets.py  tranalyzer_packets.py
tests/fuzz/: __init__.py  test_extractors_fuzz.py
tests/golden/: __init__.py  generate.py  sample.json  test_golden.py
tests/integration/: __init__.py  test_e2e_extraction.py  test_tranalyzer_e2e.py
tests/unit/: __init__.py  test_bidir_split.py  test_certificate_parser.py  test_cli.py  test_connection_graph.py  test_discovery.py  test_entropy_property.py  test_extensions.py  test_file_watcher.py  test_flow.py  test_grafana.py  test_label_loader.py  test_output_database.py  test_output_kafka.py  test_packet.py  test_pid_filter.py  test_port_classifier.py  test_prometheus_metrics.py  test_remote_backend.py  test_remote_protocol.py  test_schema.py  test_size.py  test_stats.py  test_stats_property.py  test_timing.py
(+150 files in other folders)
