[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joyfuljay"
version = "0.1.6.1"
description = "Python library for extracting ML-ready features from encrypted network traffic"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "JoyfulJay Contributors" }
]
keywords = [
    "network",
    "traffic",
    "encrypted",
    "TLS",
    "QUIC",
    "machine-learning",
    "features",
    "pcap",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Minimal core dependencies - keep install fast and reliable
dependencies = [
    "scapy>=2.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
# Alternative backends
dpkt = ["dpkt>=1.9.8"]
fast = ["dpkt>=1.9.8"]
libpcap = ["python-libpcap>=0.4.0"]

# Graph analysis
graphs = ["networkx>=3.0"]

# Database outputs
postgres = ["psycopg>=3.1"]
db = ["psycopg>=3.1"]
sqlite = []  # Uses stdlib sqlite3

# Streaming
kafka = ["kafka-python>=2.0"]

# Remote capture
remote = [
    "websockets>=12.0",
    "msgpack>=1.0.0",
]

# Console/UI helpers
progress = ["rich>=13.0"]

# Filesystem watching
watch = ["watchdog>=3.0"]

# Compression
compression = ["lz4>=4.0"]

# Certificate parsing
crypto = ["cryptography>=41.0"]

# Parquet output
arrow = ["pyarrow>=12.0"]

# Jupyter widgets/plots
jupyter = [
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "plotly>=5.0",
    "matplotlib>=3.7",
]

# PID discovery helpers
pid = ["psutil>=5.9"]

# YAML config support
yaml = ["PyYAML>=6.0"]

# Monitoring
monitoring = ["prometheus-client>=0.17.0"]

# Service discovery
discovery = ["zeroconf>=0.131.0"]

# Cython accelerators (optional, pure Python fallback available)
accelerated = [
    "cython>=3.0.0",
]

# Development
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "build>=1.0",
    "twine>=5.0",
    "prometheus-client>=0.17.0",
    "msgpack>=1.0.0",
    "websockets>=12.0",
    "rich>=13.0",
    "watchdog>=3.0",
    "lz4>=4.0",
    "cryptography>=41.0",
    "pyarrow>=12.0",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "plotly>=5.0",
    "matplotlib>=3.7",
    "psutil>=5.9",
    "PyYAML>=6.0",
    "cython>=3.0.0",
    "setuptools>=65.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "networkx>=3.0",
    "pandas-stubs>=2.0",
    "types-click>=7.1",
    "types-psutil>=5.9.0",
    "types-PyYAML>=6.0.0",
    "types-setuptools>=65.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-minify-plugin>=0.7",
    "mkdocs-glightbox>=0.3",
]

# Everything (except dev/docs)
all = [
    "dpkt>=1.9.8",
    "networkx>=3.0",
    "psycopg>=3.1",
    "kafka-python>=2.0",
    "websockets>=12.0",
    "msgpack>=1.0.0",
    "rich>=13.0",
    "watchdog>=3.0",
    "lz4>=4.0",
    "cryptography>=41.0",
    "pyarrow>=12.0",
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "plotly>=5.0",
    "matplotlib>=3.7",
    "psutil>=5.9",
    "PyYAML>=6.0",
    "prometheus-client>=0.17.0",
    "zeroconf>=0.131.0",
    "cython>=3.0.0",
]

[project.scripts]
joyfuljay = "joyfuljay.cli.main:cli"
jj = "joyfuljay.cli.main:cli"

[project.urls]
Homepage = "https://github.com/cenab/joyfuljay"
Documentation = "https://joyfuljay.readthedocs.io"
Repository = "https://github.com/cenab/joyfuljay"
Issues = "https://github.com/cenab/joyfuljay/issues"
Changelog = "https://github.com/cenab/joyfuljay/blob/main/CHANGELOG.md"

# =============================================================================
# Hatch build configuration
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/joyfuljay"]
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/profiles",
    "/README.md",
    "/LICENSE",
    "/CITATION.cff",
    "/pyproject.toml",
]
exclude = [
    # Large benchmark data
    "/benchmarks/data",
    "/benchmarks/datasets",
    "/benchmarks/_data_cache",
    "/benchmarks/results",
    # Build artifacts
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.so",
    "**/*.dylib",
    "**/build",
    "**/dist",
    "**/*.egg-info",
    # C/Cython generated files
    "src/joyfuljay/extensions/*.c",
    "src/joyfuljay/extensions/*.html",
    "src/joyfuljay/accelerators/*.c",
    "src/joyfuljay/accelerators/*.html",
]

# =============================================================================
# Tool configurations
# =============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
]
ignore = [
    "E402",   # module level import not at top of file
    "E501",   # line too long (handled by formatter)
    "F401",   # unused imports
    "F821",   # undefined name
    "F841",   # local variable assigned but never used
]

[tool.ruff.lint.isort]
known-first-party = ["joyfuljay"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "Cython.*",
    "scapy.*",
    "dpkt.*",
    "websockets.*",
    "msgpack.*",
    "networkx.*",
    "kafka.*",
    "psycopg.*",
    "zeroconf.*",
    "watchdog.*",
    "lz4.*",
    "pyarrow.*",
    "ipywidgets.*",
    "plotly.*",
    "IPython.*",
    "matplotlib.*",
    "cryptography",
    "cryptography.*",
    "yaml",
    "psutil",
    "psutil.*",
    "setuptools",
    "setuptools.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]
# Don't require benchmark data for normal test runs
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/joyfuljay"]
branch = true
parallel = true
omit = [
    "src/joyfuljay/extensions/*",
    "src/joyfuljay/accelerators/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
